# tinydnsproxy-v1

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
config/: example.toml
scripts/: dns_server.sh
src/: block_list.rs  config.rs  dns_message.rs  error.rs  listener.rs  main.rs  message.rs  tls_connection.rs  tls_message.rs
