[package]
name = "tinydnsproxy"
version = "0.2.0"
authors = ["Stevie Holdway"]
edition = "2018"

[dependencies]
curl = "0.4"
byteorder = "1.3"
env_logger = "0.7"
lazy_static = "1"
log = "0.4"
rand = "0.7"
regex = "1"
rustls = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
webpki = "0.21"
webpki-roots = "0.18"

[dev-dependencies]
tempfile = "3.1"
